# AI-Hybrid-Trainer

./: .env.example  .env.test  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  dependencies.py  main.py
app/agent/: coach_agent.py  tools.py
app/api/: router.py
app/api/v1/: agent.py  analytics.py  auth.py  plans.py  workouts.py
app/core/: exceptions.py  logging.py  middleware.py  security.py
app/db/: session.py
app/db/repositories/: user_repo.py
app/models/: __init__.py  analytics.py  document.py  training_plan.py  user.py  workout.py
app/pipeline/: ingestion.py  metrics.py  tasks.py  validators.py
app/rag/: chunker.py  embeddings.py  indexer.py  prompts.py  retriever.py
app/schemas/: agent.py  analytics.py  auth.py  workout.py
docker/: Dockerfile.api  Dockerfile.worker
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: agent.ts  analytics.ts  auth.ts  client.ts  workouts.ts
frontend/src/components/: Badge.tsx  Sidebar.tsx  Spinner.tsx  StatCard.tsx  Toast.tsx  (+1 more)
scripts/: seed_knowledge_base.py
tests/: conftest.py
tests/integration/: test_auth.py  test_health.py  test_workouts.py
tests/uat/: run_uat.py
tests/unit/: test_pipeline_metrics.py  test_pipeline_validators.py  test_rag_chunker.py
(+12 files in other folders)
