[project]
name = "ai-hybrid-trainer"
version = "0.1.0"
description = "Production-grade AI hybrid fitness training platform"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "contract: marks tests that call real LLM APIs (deselect with -m 'not contract')",
    "integration: marks integration tests requiring a database",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
